--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,10 @@ nginx:
     links:
         - fpm
     ports:
-        - "8088:80"
+        - "8888:80"
+    volumes:
+        - ./nginx.conf:/etc/nginx/conf.d/default.conf
+        - ./:/var/www/html
 
 fpm:
     image: yannoff/php-fpm:7.1-fpm-alpine
@@ -12,4 +15,3 @@ fpm:
 
     ports:
         - 9000
-        - "8000:8000"
