--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ nginx:
         - "8088:80"
 
 fpm:
-    image: yannoff/php-fpm
+    image: yannoff/php-fpm:7.1-fpm-alpine
     volumes:
         - ./:/var/www/html
 
