--- a/composer.yaml
+++ b/composer.yaml
@@ -1,18 +1,22 @@
+#
+# This file was generated automatically by Offenbach
+# @see https://github.com/yannoff/offenbach for details
+#
 type: project
 license: proprietary
 require:
-    php: ^7.1.3
+    php: '>=7.2.5'
+    ext-ctype: '*'
     ext-iconv: '*'
-    symfony/console: ^4.0
-    symfony/flex: ^1.0
-    symfony/framework-bundle: ^4.0
-    symfony/lts: ^4@dev
-    symfony/yaml: ^4.0
-    yannoff/composer-dotenv-handler: ^1.1
-require-dev:
-    symfony/dotenv: ^4.0
-    symfony/web-server-bundle: ^4.0
+    symfony/console: '5.1.*'
+    symfony/dotenv: '5.1.*'
+    symfony/flex: ^1.3.1
+    symfony/framework-bundle: '5.1.*'
+    symfony/web-server-bundle: ^4.4
+    symfony/yaml: '5.1.*'
+require-dev: {  }
 config:
+    optimize-autoloader: true
     preferred-install:
         '*': dist
     sort-packages: true
@@ -23,13 +27,17 @@ autoload-dev:
     psr-4:
         App\Tests\: tests/
 replace:
-    symfony/polyfill-apcu: '*'
+    paragonie/random_compat: '2.*'
+    symfony/polyfill-ctype: '*'
+    symfony/polyfill-iconv: '*'
+    symfony/polyfill-php72: '*'
+    symfony/polyfill-php71: '*'
     symfony/polyfill-php70: '*'
     symfony/polyfill-php56: '*'
 scripts:
     auto-scripts:
         'cache:clear': symfony-cmd
-        'assets:install --symlink --relative %PUBLIC_DIR%': symfony-cmd
+        'assets:install %PUBLIC_DIR%': symfony-cmd
     post-install-cmd:
         - '@auto-scripts'
     post-update-cmd:
@@ -38,5 +46,5 @@ conflict:
     symfony/symfony: '*'
 extra:
     symfony:
-        id: 01C17YKGDVMKZ7P4Q4D120RBAX
         allow-contrib: false
+        require: '5.1.*'
